5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4138/executions/1724_2520.log
== TEST (2019-05-12 11:19:43) 
-- CODE:
n = int(input("insira o numero:"))
i = 0
soma = 0
#termo geral 6*(sqrt(1/(i**2)))

while(n > i):
	soma = soma + 6*(sqrt(1/(i**2)))
	i = i + 1
print(round(soma,6))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    soma = soma + 6*(sqrt(1/(i**2)))
NameError: name 'sqrt' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 11:20:35) 
-- CODE:
n = int(input("insira o numero:"))
i = 0
soma = 0
#termo geral 6*(sqrt(1/(i**2)))

while(n > i):
	soma = soma + 6*(int(sqrt(1/(i**2)))
	i = i + 1
print(round(soma,6))
-- ERROR:
File "XXXX", line 8
    i = i + 1
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 11:21:32) 
-- CODE:
n = int(input("insira o numero:"))
i = 0
soma = 0
#termo geral 6*(sqrt(1/(i**2)))

while(n > i):
	soma = soma + 6*(int(sqrt(1/(i**2))))
	i = i + 1
print(round(soma,6))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    soma = soma + 6*(int(sqrt(1/(i**2))))
NameError: name 'sqrt' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 11:21:56) 
-- CODE:
n = int(input("insira o numero:"))
i = 0
soma = 0
#termo geral 6*(sqrt(1/(i**2)))
from math import *
while(n > i):
	soma = soma + 6*(int(sqrt(1/(i**2))))
	i = i + 1
print(round(soma,6))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    soma = soma + 6*(int(sqrt(1/(i**2))))
ZeroDivisionError: division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 11:22:15) 
-- CODE:
n = int(input("insira o numero:"))
i = 1
soma = 0
#termo geral 6*(sqrt(1/(i**2)))
from math import *
while(n > i):
	soma = soma + 6*(int(sqrt(1/(i**2))))
	i = i + 1
print(round(soma,6))
-- OUTPUT:
6
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 11:22:50) 
-- CODE:
n = int(input("insira o numero:"))
i = 1
soma = 0
#termo geral 6*(sqrt(1/(i**2)))
from math import *
while(n > i):
	soma = soma + 6*(sqrt(1/(i**2)))
	i = i + 1
print(round(soma,6))
-- OUTPUT:
40.744941
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 11:24:02) 
-- CODE:
n = int(input("insira o numero:"))
i = 1
soma = 0
#termo geral 6*(sqrt(1/(i**2)))
from math import *
while(n > i):
	soma = soma + 6*(sqrt(1/(i**2 + 1)))
	i = i + 1
print(round(soma,6))
-- OUTPUT:
38.451549
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 11:24:07) 
-- CODE:
n = int(input("insira o numero:"))
i = 0
soma = 0
#termo geral 6*(sqrt(1/(i**2)))
from math import *
while(n > i):
	soma = soma + 6*(sqrt(1/(i**2 + 1)))
	i = i + 1
print(round(soma,6))
-- OUTPUT:
44.451549
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 11:25:02) 
-- CODE:
n = int(input("insira o numero:"))
i = 0
soma = 0
#termo geral 6*(sqrt(1/(i**2)))
from math import *
while(n > i):
	soma = soma + 6*(sqrt(1/(i+1)**2))
	i = i + 1
print(round(soma,6))
-- OUTPUT:
40.756941
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 11:26:32) 
-- CODE:
n = int(input("insira o numero:"))
i = 0
soma = 0
#termo geral 6*(sqrt(1/(i**2)))
from math import *
while(n > i):
	soma = soma + 6/(sqrt(1/(i+1)**2))
	i = i + 1
print(round(soma,6))
-- OUTPUT:
751500.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 11:27:10) 
-- CODE:
n = int(input("insira o numero:"))
i = 0
soma = 0
#termo geral 6*(sqrt(1/(i**2)))
from math import *
while(n > i):
	soma = soma + (sqrt(6/(i+1)**2))
	i = i + 1
print(round(soma,6))
-- OUTPUT:
16.638951
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 11:27:17) 
-- CODE:
n = int(input("insira o numero:"))
i = 0
soma = 0
#termo geral 6*(sqrt(1/(i**2)))
from math import *
while(n > i):
	soma = soma + (sqrt(6/(i+1)**2))
	i = i + 1
print(round(soma,6))
-- OUTPUT:
16.638951
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 11:28:28) 
-- CODE:
n = int(input("insira o numero:"))
i = 1
soma = 0
#termo geral 6*(sqrt(1/(i**2)))
from math import *
while(n > i):
	soma = soma + (sqrt(6/(-i)**2))
	i = i + 1
print(round(soma,6))
-- OUTPUT:
16.634052
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 11:28:36) 
-- CODE:
n = int(input("insira o numero:"))
i = 1
soma = 0
#termo geral 6*(sqrt(1/(i**2)))
from math import *
while(n > i):
	soma = soma + (sqrt(6/(-i)**2))
	i = i + 1
print(round(soma,6))
-- OUTPUT:
16.634052
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 11:28:50) 
-- CODE:
n = int(input("insira o numero:"))
i = 1
soma = 0
#termo geral 6*(sqrt(1/(i**2)))
from math import *
while(n > i):
	soma = soma + (sqrt(6/(i+1)**2))
	i = i + 1
print(round(soma,6))
-- OUTPUT:
14.189462
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 11:28:59) 
-- CODE:
n = int(input("insira o numero:"))
i = 0
soma = 0
#termo geral 6*(sqrt(1/(i**2)))
from math import *
while(n > i):
	soma = soma + (sqrt(6/(i+1)**2))
	i = i + 1
print(round(soma,6))
-- OUTPUT:
16.638951
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 11:29:03) 
-- CODE:
n = int(input("insira o numero:"))
i = 0
soma = 0
#termo geral 6*(sqrt(1/(i**2)))
from math import *
while(n > i):
	soma = soma + (sqrt(6/(i+1)**2))
	i = i + 1
print(round(soma,6))
-- OUTPUT:
16.638951
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 11:29:54) 
-- CODE:
n = int(input("insira o numero:"))
i = 0
soma = 0
#termo geral 6*(sqrt(1/(i**2)))
from math import *
while(n > i):
	soma = soma + (sqrt(6/(i+1)**2))
	i = i + 1
print(round(soma,6))
-- OUTPUT:
16.638951
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 11:32:38) 
-- CODE:
n = int(input("insira o numero:"))
i = 0
soma = 0
#termo geral 6*(sqrt(1/(i**2)))
from math import *
while(n > i):
	soma = soma + sqrt(6/(i+1)**2)
	i = i + 1
print(round(soma,6))
-- OUTPUT:
16.638951
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 11:32:57) 
-- CODE:
n = int(input("insira o numero:"))
i = 0
soma = 0
#termo geral 6*(sqrt(1/(i**2)))
from math import *
while(n > i):
	soma = soma + sqrt(6/((i+1)**2))
	i = i + 1
print(round(soma,6))
-- OUTPUT:
16.638951
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 11:33:03) 
-- CODE:
n = int(input("insira o numero:"))
i = 0
soma = 0
#termo geral 6*(sqrt(1/(i**2)))
from math import *
while(n > i):
	soma = soma + sqrt(6/((i+1)**2))
	i = i + 1
print(round(soma,6))
-- OUTPUT:
16.638951
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 11:33:58) 
-- CODE:
n = int(input("insira o numero:"))
i = 0
soma = 0
#termo geral 6*(sqrt(1/(i**2)))
from math import *
while(n > i):
	soma = soma + sqrt(6/(i+1)**2)
	i = i + 1
print(round(soma,6))
-- OUTPUT:
16.638951
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 11:34:02) 
-- CODE:
n = int(input("insira o numero:"))
i = 0
soma = 0
#termo geral 6*(sqrt(1/(i**2)))
from math import *
while(n > i):
	soma = soma + sqrt(6/(i+1)**2)
	i = i + 1
print(round(soma,6))
-- OUTPUT:
16.638951
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-12 11:35:09) 
-- CODE:
n = int(input("insira o numero:"))
i = 0
soma = 0
#termo geral (sqrt(6/(i**2)))
from math import *
while(n > i):
	soma = soma + sqrt(6/(i+1)**2)
	i = i + 1
print(round(soma,6))
-- EXECUTION TIME:
0.212865
-- TEST CASE 1:
---- input:
500
---- correct output:
3.139684
---- user output:
16.638951
-- TEST CASE 2:
---- input:
159863
---- correct output:
3.141587
---- user output:
30.763855
-- TEST CASE 3:
---- input:
100
---- correct output:
3.132077
---- user output:
12.706428
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 11:35:10) 
-- CODE:
n = int(input("insira o numero:"))
i = 0
soma = 0
#termo geral (sqrt(6/(i**2)))
from math import *
while(n > i):
	soma = soma + sqrt(6/(i+1)**2)
	i = i + 1
print(round(soma,6))
-- OUTPUT:
16.638951
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 11:36:12) 
-- CODE:
n = int(input("insira o numero:"))
i = 0
soma = 0
#termo geral (sqrt(6/(i**2)))
from math import *
while(n > i):
	soma = soma + sqrt(6/(i+1)**2)
	i = i + 1
	print(soma)
print(round(soma,6))
-- OUTPUT:
2.449489742783178
3.674234614174767
4.490731195102493
5.103103630798287
5.593001579354923
6.001249869818786
6.351176975930669
6.657363193778567
6.929528720754475
7.174477695032793
7.397158580740355
7.601282725972286
7.7897050138786845
7.964668566934626
8.12796788312017
8.28106099204412
8.425148623972541
8.561231387460495
8.690151900238558
8.812626387377717
8.929268756081678
9.040609198935458
9.14710875296951
9.249170825585475
9.347150415296802
9.441361559250002
9.532083401575305
9.619565178103276
9.704030341647524
9.785679999740296
9.864695797894592
9.941242352356566
10.015469314259086
10.087513130223297
10.157498551445673
10.225539933189651
10.291742358670279
10.35620261505931
10.419010044361443
10.480247287931022
10.539990940194025
10.598312124546005
10.65527700228515
10.71094722371204
10.765380329107222
10.818630106124248
10.870746909162188
10.92177794547017
10.971767532057582
11.020757326913245
11.068786537556052
11.115892109532652
11.162108897132335
11.207469818294985
11.252005995
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 11:36:47) 
-- CODE:
n = int(input("insira o numero:"))
i = 0
soma = 0
#termo geral (sqrt(6/(i**2)))
from math import *
while(n > i):
	soma = soma + sqrt(6/(i+1)**2)
	i = i + 1
	
print(round(soma,6))
-- OUTPUT:
16.638951
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 11:37:24) 
-- CODE:
n = int(input("insira o numero:"))
i = 0
soma = 0
#termo geral (sqrt(6/(i**2)))
from math import *
while(n > i):
	soma = sqrt(soma + sqrt(6/(i+1)**2))
	i = i + 1
	
print(round(soma,6))
-- OUTPUT:
1.004885
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 11:37:33) 
-- CODE:
n = int(input("insira o numero:"))
i = 0
soma = 0
#termo geral (sqrt(6/(i**2)))
from math import *
while(n > i):
	soma = sqrt(soma + sqrt(6/(i+1)**2))
	i = i + 1
	
print(round(soma,6))
-- OUTPUT:
1.004885
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 11:39:55) 
-- CODE:
n = int(input("insira o numero:"))
i = 0
soma = 0
#termo geral (sqrt(6/(i**2)))
from math import *
while(n > i):
	soma = sqrt(soma + (6/(i+1)**2))
	i = i + 1
	
print(round(soma,6))
-- OUTPUT:
1.000024
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 11:40:00) 
-- CODE:
n = int(input("insira o numero:"))
i = 0
soma = 0
#termo geral (sqrt(6/(i**2)))
from math import *
while(n > i):
	soma = sqrt(soma + (6/(i+1)**2))
	i = i + 1
	
print(round(soma,6))
-- OUTPUT:
1.000024
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 11:40:26) 
-- CODE:
n = int(input("insira o numero:"))
i = 0
soma = 0
#termo geral (sqrt(6/(i**2)))
from math import *
while(n > i):
	soma = sqrt(soma) + (6/(i+1)**2)
	i = i + 1
	
print(round(soma,6))
-- OUTPUT:
1.000048
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 11:40:39) 
-- CODE:
n = int(input("insira o numero:"))
i = 0
soma = 0
#termo geral (sqrt(6/(i**2)))
from math import *
while(n > i):
	soma = sqrt(soma) + (6/(i+1)**2)
	i = i + 1
	
print(round(soma,6))
-- OUTPUT:
1.000048
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 11:41:21) 
-- CODE:
n = int(input("insira o numero:"))
i = 0
soma = 0
#termo geral (sqrt(6/(i**2)))
from math import *
while(n > i):
	soma = soma + sqrt(6/(i+1)**2)
	i = i + 1
	
print(round(soma,6))
-- OUTPUT:
16.638951
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 11:42:18) 
-- CODE:
n = int(input("insira o numero:"))
i = 0
soma = 0
#termo geral (sqrt(6/(i**2)))
from math import *
while(n > i):
	tg = (i +1)**2
	soma = soma + sqrt(6/tg)
	i = i + 1
	
print(round(soma,6))
-- OUTPUT:
16.638951
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 11:42:23) 
-- CODE:
n = int(input("insira o numero:"))
i = 0
soma = 0
#termo geral (sqrt(6/(i**2)))
from math import *
while(n > i):
	tg = (i +1)**2
	soma = soma + sqrt(6/tg)
	i = i + 1
	
print(round(soma,6))
-- OUTPUT:
16.638951
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 11:42:37) 
-- CODE:
n = int(input("insira o numero:"))
i = 0
soma = 0
#termo geral (sqrt(6/(i**2)))
from math import *
while(n > i):
	tg = (i +1)**2
	soma = soma + sqrt(6/tg)
	i = i + 1
	print(tg)
print(round(soma,6))
-- OUTPUT:
1
4
9
16
25
36
49
64
81
100
121
144
169
196
225
256
289
324
361
400
441
484
529
576
625
676
729
784
841
900
961
1024
1089
1156
1225
1296
1369
1444
1521
1600
1681
1764
1849
1936
2025
2116
2209
2304
2401
2500
2601
2704
2809
2916
3025
3136
3249
3364
3481
3600
3721
3844
3969
4096
4225
4356
4489
4624
4761
4900
5041
5184
5329
5476
5625
5776
5929
6084
6241
6400
6561
6724
6889
7056
7225
7396
7569
7744
7921
8100
8281
8464
8649
8836
9025
9216
9409
9604
9801
10000
10201
10404
10609
10816
11025
11236
11449
11664
11881
12100
12321
12544
12769
12996
13225
13456
13689
13924
14161
14400
14641
14884
15129
15376
15625
15876
16129
16384
16641
16900
17161
17424
17689
17956
18225
18496
18769
19044
19321
19600
19881
20164
20449
20736
21025
21316
21609
21904
22201
22500
22801
23104
23409
23716
24025
24336
24649
24964
25281
25600
25921
26244
26569
26896
27225
27556
27889
28224
28561
28900
29241
29584
29929
30276
30625
30976
31329
31684
32041
32400
32761
33124
33489
33856
34225
34596
34969
35344
35721
36100
36
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 11:42:44) 
-- CODE:
n = int(input("insira o numero:"))
i = 0
soma = 0
#termo geral (sqrt(6/(i**2)))
from math import *
while(n > i):
	tg = (i +1)**2
	soma = soma + sqrt(6/tg)
	i = i + 1
	print(tg)
print(round(soma,6))
-- OUTPUT:
1
4
9
16
25
36
49
64
81
100
121
144
169
196
225
256
289
324
361
400
441
484
529
576
625
676
729
784
841
900
961
1024
1089
1156
1225
1296
1369
1444
1521
1600
1681
1764
1849
1936
2025
2116
2209
2304
2401
2500
2601
2704
2809
2916
3025
3136
3249
3364
3481
3600
3721
3844
3969
4096
4225
4356
4489
4624
4761
4900
5041
5184
5329
5476
5625
5776
5929
6084
6241
6400
6561
6724
6889
7056
7225
7396
7569
7744
7921
8100
8281
8464
8649
8836
9025
9216
9409
9604
9801
10000
10201
10404
10609
10816
11025
11236
11449
11664
11881
12100
12321
12544
12769
12996
13225
13456
13689
13924
14161
14400
14641
14884
15129
15376
15625
15876
16129
16384
16641
16900
17161
17424
17689
17956
18225
18496
18769
19044
19321
19600
19881
20164
20449
20736
21025
21316
21609
21904
22201
22500
22801
23104
23409
23716
24025
24336
24649
24964
25281
25600
25921
26244
26569
26896
27225
27556
27889
28224
28561
28900
29241
29584
29929
30276
30625
30976
31329
31684
32041
32400
32761
33124
33489
33856
34225
34596
34969
35344
35721
36100
36
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 11:45:00) 
-- CODE:
n = int(input("insira o numero:"))
i = 0
soma = 0
#termo geral (sqrt(6/(i**2)))
from math import *
while(n > i):
	tg = (i +1)**2
	soma = sqrt(soma) + sqrt(6/tg)
	i = i + 1
	print(tg)
print(round(soma,6))
-- OUTPUT:
1
4
9
16
25
36
49
64
81
100
121
144
169
196
225
256
289
324
361
400
441
484
529
576
625
676
729
784
841
900
961
1024
1089
1156
1225
1296
1369
1444
1521
1600
1681
1764
1849
1936
2025
2116
2209
2304
2401
2500
2601
2704
2809
2916
3025
3136
3249
3364
3481
3600
3721
3844
3969
4096
4225
4356
4489
4624
4761
4900
5041
5184
5329
5476
5625
5776
5929
6084
6241
6400
6561
6724
6889
7056
7225
7396
7569
7744
7921
8100
8281
8464
8649
8836
9025
9216
9409
9604
9801
10000
10201
10404
10609
10816
11025
11236
11449
11664
11881
12100
12321
12544
12769
12996
13225
13456
13689
13924
14161
14400
14641
14884
15129
15376
15625
15876
16129
16384
16641
16900
17161
17424
17689
17956
18225
18496
18769
19044
19321
19600
19881
20164
20449
20736
21025
21316
21609
21904
22201
22500
22801
23104
23409
23716
24025
24336
24649
24964
25281
25600
25921
26244
26569
26896
27225
27556
27889
28224
28561
28900
29241
29584
29929
30276
30625
30976
31329
31684
32041
32400
32761
33124
33489
33856
34225
34596
34969
35344
35721
36100
36
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 11:45:18) 
-- CODE:
n = int(input("insira o numero:"))
i = 0
soma = 0
#termo geral (sqrt(6/(i**2)))
from math import *
while(n > i):
	tg = (i +1)**2
	soma = sqrt(soma) + sqrt(6/tg)
	i = i + 1
	print(tg)
print(round(soma,6))
-- OUTPUT:
1
4
9
16
25
36
49
64
81
100
121
144
169
196
225
256
289
324
361
400
441
484
529
576
625
676
729
784
841
900
961
1024
1089
1156
1225
1296
1369
1444
1521
1600
1681
1764
1849
1936
2025
2116
2209
2304
2401
2500
2601
2704
2809
2916
3025
3136
3249
3364
3481
3600
3721
3844
3969
4096
4225
4356
4489
4624
4761
4900
5041
5184
5329
5476
5625
5776
5929
6084
6241
6400
6561
6724
6889
7056
7225
7396
7569
7744
7921
8100
8281
8464
8649
8836
9025
9216
9409
9604
9801
10000
10201
10404
10609
10816
11025
11236
11449
11664
11881
12100
12321
12544
12769
12996
13225
13456
13689
13924
14161
14400
14641
14884
15129
15376
15625
15876
16129
16384
16641
16900
17161
17424
17689
17956
18225
18496
18769
19044
19321
19600
19881
20164
20449
20736
21025
21316
21609
21904
22201
22500
22801
23104
23409
23716
24025
24336
24649
24964
25281
25600
25921
26244
26569
26896
27225
27556
27889
28224
28561
28900
29241
29584
29929
30276
30625
30976
31329
31684
32041
32400
32761
33124
33489
33856
34225
34596
34969
35344
35721
36100
36
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 11:45:29) 
-- CODE:
n = int(input("insira o numero:"))
i = 0
soma = 0
#termo geral (sqrt(6/(i**2)))
from math import *
while(n > i):
	tg = (i +1)**2
	soma = sqrt(soma) + sqrt(6/tg)
	i = i + 1
	print(tg)
print(round(soma,6))
-- OUTPUT:
1
4
9
16
25
36
49
64
81
100
121
144
169
196
225
256
289
324
361
400
441
484
529
576
625
676
729
784
841
900
961
1024
1089
1156
1225
1296
1369
1444
1521
1600
1681
1764
1849
1936
2025
2116
2209
2304
2401
2500
2601
2704
2809
2916
3025
3136
3249
3364
3481
3600
3721
3844
3969
4096
4225
4356
4489
4624
4761
4900
5041
5184
5329
5476
5625
5776
5929
6084
6241
6400
6561
6724
6889
7056
7225
7396
7569
7744
7921
8100
8281
8464
8649
8836
9025
9216
9409
9604
9801
10000
10201
10404
10609
10816
11025
11236
11449
11664
11881
12100
12321
12544
12769
12996
13225
13456
13689
13924
14161
14400
14641
14884
15129
15376
15625
15876
16129
16384
16641
16900
17161
17424
17689
17956
18225
18496
18769
19044
19321
19600
19881
20164
20449
20736
21025
21316
21609
21904
22201
22500
22801
23104
23409
23716
24025
24336
24649
24964
25281
25600
25921
26244
26569
26896
27225
27556
27889
28224
28561
28900
29241
29584
29929
30276
30625
30976
31329
31684
32041
32400
32761
33124
33489
33856
34225
34596
34969
35344
35721
36100
36
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 11:46:50) 
-- CODE:
n = int(input("insira o numero:"))
i = 0
soma = 0
#termo geral (sqrt(6/(i**2)))
from math import *
while(n > i):
	tg = (i +1)**2
	soma = sqrt(soma + (6/tg))
	i = i + 1
	print(tg)
print(round(soma,6))
-- OUTPUT:
1
4
9
16
25
36
49
64
81
100
121
144
169
196
225
256
289
324
361
400
441
484
529
576
625
676
729
784
841
900
961
1024
1089
1156
1225
1296
1369
1444
1521
1600
1681
1764
1849
1936
2025
2116
2209
2304
2401
2500
2601
2704
2809
2916
3025
3136
3249
3364
3481
3600
3721
3844
3969
4096
4225
4356
4489
4624
4761
4900
5041
5184
5329
5476
5625
5776
5929
6084
6241
6400
6561
6724
6889
7056
7225
7396
7569
7744
7921
8100
8281
8464
8649
8836
9025
9216
9409
9604
9801
10000
10201
10404
10609
10816
11025
11236
11449
11664
11881
12100
12321
12544
12769
12996
13225
13456
13689
13924
14161
14400
14641
14884
15129
15376
15625
15876
16129
16384
16641
16900
17161
17424
17689
17956
18225
18496
18769
19044
19321
19600
19881
20164
20449
20736
21025
21316
21609
21904
22201
22500
22801
23104
23409
23716
24025
24336
24649
24964
25281
25600
25921
26244
26569
26896
27225
27556
27889
28224
28561
28900
29241
29584
29929
30276
30625
30976
31329
31684
32041
32400
32761
33124
33489
33856
34225
34596
34969
35344
35721
36100
36
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 11:46:54) 
-- CODE:
n = int(input("insira o numero:"))
i = 0
soma = 0
#termo geral (sqrt(6/(i**2)))
from math import *
while(n > i):
	tg = (i +1)**2
	soma = sqrt(soma + (6/tg))
	i = i + 1
	print(tg)
print(round(soma,6))
-- OUTPUT:
1
4
9
16
25
36
49
64
81
100
121
144
169
196
225
256
289
324
361
400
441
484
529
576
625
676
729
784
841
900
961
1024
1089
1156
1225
1296
1369
1444
1521
1600
1681
1764
1849
1936
2025
2116
2209
2304
2401
2500
2601
2704
2809
2916
3025
3136
3249
3364
3481
3600
3721
3844
3969
4096
4225
4356
4489
4624
4761
4900
5041
5184
5329
5476
5625
5776
5929
6084
6241
6400
6561
6724
6889
7056
7225
7396
7569
7744
7921
8100
8281
8464
8649
8836
9025
9216
9409
9604
9801
10000
10201
10404
10609
10816
11025
11236
11449
11664
11881
12100
12321
12544
12769
12996
13225
13456
13689
13924
14161
14400
14641
14884
15129
15376
15625
15876
16129
16384
16641
16900
17161
17424
17689
17956
18225
18496
18769
19044
19321
19600
19881
20164
20449
20736
21025
21316
21609
21904
22201
22500
22801
23104
23409
23716
24025
24336
24649
24964
25281
25600
25921
26244
26569
26896
27225
27556
27889
28224
28561
28900
29241
29584
29929
30276
30625
30976
31329
31684
32041
32400
32761
33124
33489
33856
34225
34596
34969
35344
35721
36100
36
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 11:47:59) 
-- CODE:
n = int(input("insira o numero:"))
i = 0
soma = 0
#termo geral (sqrt(6/(i**2)))
from math import *
while(n > i):
	tg = (i +1)**2
	soma = soma + (6/tg)
	soma1 = sqrt(soma)
	i = i + 1
	print(tg)
print(round(soma1,6))
-- OUTPUT:
1
4
9
16
25
36
49
64
81
100
121
144
169
196
225
256
289
324
361
400
441
484
529
576
625
676
729
784
841
900
961
1024
1089
1156
1225
1296
1369
1444
1521
1600
1681
1764
1849
1936
2025
2116
2209
2304
2401
2500
2601
2704
2809
2916
3025
3136
3249
3364
3481
3600
3721
3844
3969
4096
4225
4356
4489
4624
4761
4900
5041
5184
5329
5476
5625
5776
5929
6084
6241
6400
6561
6724
6889
7056
7225
7396
7569
7744
7921
8100
8281
8464
8649
8836
9025
9216
9409
9604
9801
10000
10201
10404
10609
10816
11025
11236
11449
11664
11881
12100
12321
12544
12769
12996
13225
13456
13689
13924
14161
14400
14641
14884
15129
15376
15625
15876
16129
16384
16641
16900
17161
17424
17689
17956
18225
18496
18769
19044
19321
19600
19881
20164
20449
20736
21025
21316
21609
21904
22201
22500
22801
23104
23409
23716
24025
24336
24649
24964
25281
25600
25921
26244
26569
26896
27225
27556
27889
28224
28561
28900
29241
29584
29929
30276
30625
30976
31329
31684
32041
32400
32761
33124
33489
33856
34225
34596
34969
35344
35721
36100
36
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 11:48:04) 
-- CODE:
n = int(input("insira o numero:"))
i = 0
soma = 0
#termo geral (sqrt(6/(i**2)))
from math import *
while(n > i):
	tg = (i +1)**2
	soma = soma + (6/tg)
	soma1 = sqrt(soma)
	i = i + 1
	print(tg)
print(round(soma1,6))
-- OUTPUT:
1
4
9
16
25
36
49
64
81
100
121
144
169
196
225
256
289
324
361
400
441
484
529
576
625
676
729
784
841
900
961
1024
1089
1156
1225
1296
1369
1444
1521
1600
1681
1764
1849
1936
2025
2116
2209
2304
2401
2500
2601
2704
2809
2916
3025
3136
3249
3364
3481
3600
3721
3844
3969
4096
4225
4356
4489
4624
4761
4900
5041
5184
5329
5476
5625
5776
5929
6084
6241
6400
6561
6724
6889
7056
7225
7396
7569
7744
7921
8100
8281
8464
8649
8836
9025
9216
9409
9604
9801
10000
10201
10404
10609
10816
11025
11236
11449
11664
11881
12100
12321
12544
12769
12996
13225
13456
13689
13924
14161
14400
14641
14884
15129
15376
15625
15876
16129
16384
16641
16900
17161
17424
17689
17956
18225
18496
18769
19044
19321
19600
19881
20164
20449
20736
21025
21316
21609
21904
22201
22500
22801
23104
23409
23716
24025
24336
24649
24964
25281
25600
25921
26244
26569
26896
27225
27556
27889
28224
28561
28900
29241
29584
29929
30276
30625
30976
31329
31684
32041
32400
32761
33124
33489
33856
34225
34596
34969
35344
35721
36100
36
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 11:48:08) 
-- CODE:
n = int(input("insira o numero:"))
i = 0
soma = 0
#termo geral (sqrt(6/(i**2)))
from math import *
while(n > i):
	tg = (i +1)**2
	soma = soma + (6/tg)
	soma1 = sqrt(soma)
	i = i + 1
	print(tg)
print(round(soma1,6))
-- OUTPUT:
1
4
9
16
25
36
49
64
81
100
121
144
169
196
225
256
289
324
361
400
441
484
529
576
625
676
729
784
841
900
961
1024
1089
1156
1225
1296
1369
1444
1521
1600
1681
1764
1849
1936
2025
2116
2209
2304
2401
2500
2601
2704
2809
2916
3025
3136
3249
3364
3481
3600
3721
3844
3969
4096
4225
4356
4489
4624
4761
4900
5041
5184
5329
5476
5625
5776
5929
6084
6241
6400
6561
6724
6889
7056
7225
7396
7569
7744
7921
8100
8281
8464
8649
8836
9025
9216
9409
9604
9801
10000
10201
10404
10609
10816
11025
11236
11449
11664
11881
12100
12321
12544
12769
12996
13225
13456
13689
13924
14161
14400
14641
14884
15129
15376
15625
15876
16129
16384
16641
16900
17161
17424
17689
17956
18225
18496
18769
19044
19321
19600
19881
20164
20449
20736
21025
21316
21609
21904
22201
22500
22801
23104
23409
23716
24025
24336
24649
24964
25281
25600
25921
26244
26569
26896
27225
27556
27889
28224
28561
28900
29241
29584
29929
30276
30625
30976
31329
31684
32041
32400
32761
33124
33489
33856
34225
34596
34969
35344
35721
36100
36
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-12 11:48:16) 
-- CODE:
n = int(input("insira o numero:"))
i = 0
soma = 0
#termo geral (sqrt(6/(i**2)))
from math import *
while(n > i):
	tg = (i +1)**2
	soma = soma + (6/tg)
	soma1 = sqrt(soma)
	i = i + 1
	print(tg)
print(round(soma1,6))
-- EXECUTION TIME:
0.112284
-- TEST CASE 1:
---- input:
500
---- correct output:
3.139684
---- user output:
1
4
9
16
25
36
49
64
81
100
121
144
169
196
225
256
289
324
361
400
441
484
529
576
625
676
729
784
841
900
961
1024
1089
1156
1225
1296
1369
1444
1521
1600
1681
1764
1849
1936
2025
2116
2209
2304
2401
2500
2601
2704
2809
2916
3025
3136
3249
3364
3481
3600
3721
3844
3969
4096
4225
4356
4489
4624
4761
4900
5041
5184
5329
5476
5625
5776
5929
6084
6241
6400
6561
6724
6889
7056
7225
7396
7569
7744
7921
8100
8281
8464
8649
8836
9025
9216
9409
9604
9801
10000
10201
10404
10609
10816
11025
11236
11449
11664
11881
12100
12321
12544
12769
12996
13225
13456
13689
13924
14161
14400
14641
14884
15129
15376
15625
15876
16129
16384
16641
16900
17161
17424
17689
17956
18225
18496
18769
19044
19321
19600
19881
20164
20449
20736
21025
21316
21609
21904
22201
22500
22801
23104
23409
23716
24025
24336
24649
24964
25281
25600
25921
26244
26569
26896
27225
27556
27889
28224
28561
28900
29241
29584
29929
30276
30625
30976
31329
31684
32041
32400
32761
33124
33489
33856
34225
34596
34969
35344
35721
36100
36
-- TEST CASE 2:
---- input:
159863
---- correct output:
3.141587
---- user output:
1
4
9
16
25
36
49
64
81
100
121
144
169
196
225
256
289
324
361
400
441
484
529
576
625
676
729
784
841
900
961
1024
1089
1156
1225
1296
1369
1444
1521
1600
1681
1764
1849
1936
2025
2116
2209
2304
2401
2500
2601
2704
2809
2916
3025
3136
3249
3364
3481
3600
3721
3844
3969
4096
4225
4356
4489
4624
4761
4900
5041
5184
5329
5476
5625
5776
5929
6084
6241
6400
6561
6724
6889
7056
7225
7396
7569
7744
7921
8100
8281
8464
8649
8836
9025
9216
9409
9604
9801
10000
10201
10404
10609
10816
11025
11236
11449
11664
11881
12100
12321
12544
12769
12996
13225
13456
13689
13924
14161
14400
14641
14884
15129
15376
15625
15876
16129
16384
16641
16900
17161
17424
17689
17956
18225
18496
18769
19044
19321
19600
19881
20164
20449
20736
21025
21316
21609
21904
22201
22500
22801
23104
23409
23716
24025
24336
24649
24964
25281
25600
25921
26244
26569
26896
27225
27556
27889
28224
28561
28900
29241
29584
29929
30276
30625
30976
31329
31684
32041
32400
32761
33124
33489
33856
34225
34596
34969
35344
35721
36100
36
-- TEST CASE 3:
---- input:
100
---- correct output:
3.132077
---- user output:
1
4
9
16
25
36
49
64
81
100
121
144
169
196
225
256
289
324
361
400
441
484
529
576
625
676
729
784
841
900
961
1024
1089
1156
1225
1296
1369
1444
1521
1600
1681
1764
1849
1936
2025
2116
2209
2304
2401
2500
2601
2704
2809
2916
3025
3136
3249
3364
3481
3600
3721
3844
3969
4096
4225
4356
4489
4624
4761
4900
5041
5184
5329
5476
5625
5776
5929
6084
6241
6400
6561
6724
6889
7056
7225
7396
7569
7744
7921
8100
8281
8464
8649
8836
9025
9216
9409
9604
9801
10000
3.132077
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-12 11:48:21) 
-- CODE:
n = int(input("insira o numero:"))
i = 0
soma = 0
#termo geral (sqrt(6/(i**2)))
from math import *
while(n > i):
	tg = (i +1)**2
	soma = soma + (6/tg)
	soma1 = sqrt(soma)
	i = i + 1
	
print(round(soma1,6))
-- EXECUTION TIME:
0.18923
-- TEST CASE 1:
---- input:
500
---- correct output:
3.139684
---- user output:
3.139684
-- TEST CASE 2:
---- input:
159863
---- correct output:
3.141587
---- user output:
3.141587
-- TEST CASE 3:
---- input:
100
---- correct output:
3.132077
---- user output:
3.132077
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
